Clipboard paste implimentation

--- a/README.ipynb
+++ b/README.ipynb
@@ -63,6 +63,44 @@
    "source": [
     "Image.open(BytesIO(b64decode(save_input.value.split(\",\")[-1])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width = 256\n",
+    "height = 256\n",
+    "\n",
+    "ID = id(_)\n",
+    "marker = wi.HTML(f'<div id=\"marker{ID}\"></div>')\n",
+    "paste_button = wi.Button(description=\"paste\")\n",
+    "canvas = wi.HTML(f\"\"\"\n",
+    "<canvas\n",
+    "    id=canvas{ID}\n",
+    "    width={width}\n",
+    "    height={height}\n",
+    "    style=background:white;>\n",
+    "</canvas>\n",
+    "\"\"\")\n",
+    "\n",
+    "app = wi.AppLayout(\n",
+    "    center=wi.VBox((\n",
+    "        marker,\n",
+    "        paste_button,\n",
+    "        canvas,\n",
+    "    )),\n",
+    ")\n",
+    "display(app)\n",
+    "Javascript(f\"\"\"\n",
+    "{Path('spylus.js').read_text()}\n",
+    "let app = new (Paste(Canvas))({{\n",
+    "    canvas: document.getElementById(\"canvas{ID}\"),\n",
+    "    paste_button: find_element('//div[@id=\"marker{ID}\"]/../../..//button', 0),\n",
+    "}});\n",
+    "\"\"\")"
+   ]
   }
  ],
  "metadata": {
